# afraz_portfolio

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
api/: contact.py
backend/: README.md  __init__.py  __main__.py  app.py  config.py  database.py  email_utils.py
portfolio website/: about.html  admin.html  blog-post.html  blog.html  contact.html  editor.html  index.html  projects.html
portfolio website 2/: README.md  about.html  blog-post.html  blog.html  contact.html  index.html  projects.html  research.html  skills.html
portfolio website 2/assets/: admin.css  blog-content.js  data.js  editor.css  editor.js  pages.css  styles.css
portfolio website.bak-premerge/: README.md  about.html  admin.html  blog-post.html  blog.html  contact.html  index.html  projects.html  research.html  skills.html
portfolio website.bak-premerge/assets/: admin-collections.js  admin.css  admin.js  blog-content.js  pages.css  site.js  store.js
portfolio website/assets/: admin-collections.js  admin.css  admin.js  data.js  editor.css  editor.js  pages.css  site.js  store.js  styles.css
