[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "afraz_portfolio"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Afraz Ul Haque" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]


[tool.ruff]
line-length = 99
src = ["afraz_portfolio"]
include = ["pyproject.toml", "afraz_portfolio/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["afraz_portfolio"]
force-sort-within-sections = true

